--- a/NetworkLib/makefile
+++ b/NetworkLib/makefile
@@ -1,22 +1,13 @@
 .SILENT:
 
-*.o = $(bin)ServiceSocket.o $(bin)ListenSocket.o
+*.o = $(bin)ServiceSocket.o $(bin)ListenSocket.o $(bin)ClientSocket.o
 bin = ./.obj/
 Libls = ./ListenSocket/
 Liblss = ./ServiceSocket/
 Liblc = ./ClientSocket/
 LibNt = ./
 
-ALL: Client.app Server.app
-
-Client.app:		client.cpp $(bin)ClientSocket.o
-				echo Client.app
-				g++	client.cpp $(bin)ClientSocket.o -o Client.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
-
-Server.app:		server.cpp $(*.o)
-				echo Server.app
-				g++	server.cpp $(*.o) -o Server.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
-
+ALL: $(*.o)
 
 $(bin)ClientSocket.o:	$(Liblc)clientsocket.cpp $(Liblc)clientsocket.hpp
 						echo ClientSocket.o
@@ -34,12 +25,8 @@ $(bin)ListenSocket.o:	$(Libls)listensocket.cpp $(Libls)listensocket.hpp $(Liblss
 #Clean/Clear des .o et de l'application
 clean:	
 		rm $(*.o)
-		rm Client.app
-		rm Server.app
 		clear
 
 clear:	
 		rm $(*.o)
-		rm Client.app
-		rm Server.app
 		clear
