--- a/Equipment-App/makefile
+++ b/Equipment-App/makefile
@@ -13,25 +13,28 @@ ThreadLib.objs = ../MyLibThread_POSIX/mylibthread_POSIX.o
 UtilityLib.objs = ../UtilityLib/UtilityLib.o
 UtilityLib.hpp = ../UtilityLib/utilitylib.hpp
 
+Date.objs = ../UtilityLib/Date.o
+Date.hpp = ../UtilityLib/date.hpp
 
-ALL: Client.app Server.app
 
-Client.app:		client.cpp $(NetworkLib.Client) $(NetworkLib.hpp)
+ALL: Client/Client.app Server/Server.app
+
+Client/Client.app:		client.cpp $(NetworkLib.Client) $(NetworkLib.hpp) $(Date.hpp)
 				echo Client.app
-				g++	client.cpp $(NetworkLib.objs) $(UtilityLib.objs) -o Client.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
+				g++	client.cpp $(NetworkLib.objs) $(UtilityLib.objs) $(Date.objs) -o Client/Client.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
 
-Server.app:		server.cpp $(NetworkLib.objs) $(NetworkLib.Listen) $(NetworkLib.Service) $(ThreadLib.objs) $(NetworkLib.hpp)
+Server/Server.app:		server.cpp $(NetworkLib.objs) $(NetworkLib.Listen) $(NetworkLib.Service) $(ThreadLib.objs) $(NetworkLib.hpp) $(Date.hpp)
 				echo Server.app
-				g++	server.cpp $(NetworkLib.objs) $(ThreadLib.objs) $(UtilityLib.objs) -o Server.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
+				g++	server.cpp $(NetworkLib.objs) $(ThreadLib.objs) $(UtilityLib.objs) $(Date.objs) -o Server/Server.app -I -lnsl -I -lsocket -pthread -m64 -D SUN;
 
 
 #Clean/Clear des .o et de l'application
 clean:	
-		rm Client.app
-		rm Server.app
+		rm Client/Client.app
+		rm Server/Server.app
 		clear
 
 clear:	
-		rm Client.app
-		rm Server.app
+		rm Client/Client.app
+		rm Server/Server.app
 		clear
