--- a/UtilityLib/makefile
+++ b/UtilityLib/makefile
@@ -1,12 +1,16 @@
 .SILENT:
 
-*.o = UtilityLib.o
+*.o = UtilityLib.o Date.o
 
-ALL: UtilityLib.o
+ALL: $(*.o)
 
 UtilityLib.o:	utilitylib.cpp utilitylib.hpp
 						echo UtilityLib.o
 						g++	utilitylib.cpp -c -o UtilityLib.o
+
+Date.o:		date.cpp date.hpp
+			echo Date.o
+			g++ date.cpp -c -o Date.o
 
 
 #Clean/Clear des .o et de l'application
