--- a/Commande/makefile
+++ b/Commande/makefile
@@ -1,6 +1,6 @@
 .SILENT:
 
-*.o = Commande.o
+*.o = Commande.o Equipment.o
 bin = ./.obj/
 
 ALL: $(*.o)
@@ -9,6 +9,9 @@ Commande.o:	commande.cpp commande.hpp
 			echo Commande.o
 			g++	commande.cpp -c -o Commande.o
 
+Equipment.o:	equipment.cpp equipment.hpp
+				echo Equipment.o
+				g++	equipment.cpp -c -o Equipment.o
 
 #Clean/Clear des .o et de l'application
 clean:	
