--- a/DB_Access_Tools/nbproject/project.properties
+++ b/DB_Access_Tools/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.derbyclient.jar=/usr/local/jdk1.8.0_111/db/lib/derbyclient.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.30.jar=mysql-connector-java-8.0.30.jar
 file.reference.ojdbc8.jar=ojdbc8.jar
+file.reference.ojdbc8.jar-1=../../ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.ojdbc8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
