--- a/DB_Access_Tools/nbproject/project.properties
+++ b/DB_Access_Tools/nbproject/project.properties
@@ -33,21 +33,17 @@ excludes=
 file.reference.derby.jar=/usr/local/jdk1.8.0_111/db/lib/derby.jar
 file.reference.derbyclient.jar=/usr/local/jdk1.8.0_111/db/lib/derbyclient.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
-file.reference.jdbc.zip=jdbc.zip
 file.reference.mysql-connector-java-8.0.30.jar=mysql-connector-java-8.0.30.jar
-file.reference.ojdbc8.jar=ojdbc8.jar
 file.reference.ojdbc8.jar-1=../../ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.ojdbc8.jar}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.ojdbc8.jar-1}:\
-    ${file.reference.jdbc.zip}
+    ${file.reference.ojdbc8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
