--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /DB_Access_Tools/nbproject/private/
 /DB_Access_Tools/build/
 /JavaNetworkLib/build/
+/Activities/Activities_JDBC_Lib/build/
+/Activities/JavaDataBaseLib/nbproject/private/
