--- a/Activities/Activities_Protocol_Lib/nbproject/project.properties
+++ b/Activities/Activities_Protocol_Lib/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.NetworkLib.jar}
+    ${reference.NetworkLib.jar}:\
+    ${reference.JavaDataBaseLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +59,9 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.JavaDataBaseLib=../JavaDataBaseLib
 project.NetworkLib=../../JavaNetworkLib
+reference.JavaDataBaseLib.jar=${project.JavaDataBaseLib}/dist/JavaDataBaseLib.jar
 reference.NetworkLib.jar=${project.NetworkLib}/dist/NetworkLib.jar
 run.classpath=\
     ${javac.classpath}:\
