--- a/Activities/JavaDataBaseLib/build.xml
+++ b/Activities/JavaDataBaseLib/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Activities_JDBC_Lib" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Activities_JDBC_Lib.</description>
+<project name="JavaDataBaseLib" default="default" basedir=".">
+    <description>Builds, tests, and runs the project JavaDataBaseLib.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Activities_JDBC_Lib-impl.jar">
+        <target name="run" depends="JavaDataBaseLib-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
