--- a/Activities/JavaDataBaseLib/nbproject/project.properties
+++ b/Activities/JavaDataBaseLib/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Activities_JDBC_Lib.jar
+dist.jar=${dist.dir}/JavaDataBaseLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
