--- a/Activities/Serveur_Activities/nbproject/private/private.properties
+++ b/Activities/Serveur_Activities/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Arkios\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+project.Activities_JDBC_Lib=C:\\Users\\Thomas\\Desktop\\Inpres-EnjoyYourHolidays\\Activities\\JavaDataBaseLib
+user.properties.file=C:\\Users\\Thomas\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
