--- a/Activities/Activities_Protocol_Lib/nbproject/project.properties
+++ b/Activities/Activities_Protocol_Lib/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=TestApp
+main.class=ActivitiesDataLayer.testApp
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
