Reservation Serveur + Protocol v0.5

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /Activities/Activities_Server/nbproject/private/
 /Activities/JavaDataBaseLib/build/
 /Activities/JavaDataBaseLib/dist/
+/Reservation/Reservation_Server/build/
+/Reservation/Reservation_Protocol/build/
+/Reservation/Reservation_Protocol/dist/
+/Reservation/Reservation_Server/dist/
