--- a/Reservation/Reservation_Protocol/nbproject/project.properties
+++ b/Reservation/Reservation_Protocol/nbproject/project.properties
@@ -30,9 +30,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JavaDataBaseLib.jar}:\
     ${reference.NetworkLib.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${reference.JavaDataBaseLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
