--- a/Reservation/Reservation_Server/nbproject/project.properties
+++ b/Reservation/Reservation_Server/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Reservation_Protocol.jar}:\
+    ${reference.NetworkLib.jar}:\
+    ${reference.JavaDataBaseLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,11 +57,17 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=reservation_server.Reservation_Server
+main.class=reservation_server.ReservationServerApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.JavaDataBaseLib=../../Activities/JavaDataBaseLib
+project.NetworkLib=../../JavaNetworkLib
+project.Reservation_Protocol=../Reservation_Protocol
+reference.JavaDataBaseLib.jar=${project.JavaDataBaseLib}/dist/JavaDataBaseLib.jar
+reference.NetworkLib.jar=${project.NetworkLib}/dist/NetworkLib.jar
+reference.Reservation_Protocol.jar=${project.Reservation_Protocol}/dist/Reservation_Protocol.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
