--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Reservation/Reservation_Protocol/build/
 /Reservation/Reservation_Protocol/dist/
 /Reservation/Reservation_Server/dist/
+/Reservation/Reservation_Client/build/
+/Reservation/Reservation_Client/dist/
