--- a/Reservation/Reservation_Server/nbproject/project.properties
+++ b/Reservation/Reservation_Server/nbproject/project.properties
@@ -27,12 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/Reservation_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.30.jar=..\\..\\DB_Access_Tools\\mysql-connector-java-8.0.30.jar
+file.reference.ojdbc8.jar=..\\..\\DB_Access_Tools\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Reservation_Protocol.jar}:\
     ${reference.NetworkLib.jar}:\
-    ${reference.JavaDataBaseLib.jar}
+    ${reference.JavaDataBaseLib.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
