--- a/Reservation/Reservation_Client/nbproject/project.properties
+++ b/Reservation/Reservation_Client/nbproject/project.properties
@@ -31,7 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Reservation_Protocol.jar}:\
-    ${reference.NetworkLib.jar}
+    ${reference.NetworkLib.jar}:\
+    ${libs.jCalendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
