--- a/Reservation/Reservation_Protocol/nbproject/project.properties
+++ b/Reservation/Reservation_Protocol/nbproject/project.properties
@@ -32,7 +32,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.NetworkLib.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${reference.JavaDataBaseLib.jar}
+    ${reference.JavaDataBaseLib.jar}:\
+    ${libs.jCalendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
