All perfect Except MultiReservation

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 /Reservation/Reservation_Protocol/build.xml
 /Reservation/Reservation_Protocol/server.cfg
 /Reservation/Reservation_Protocol/manifest.mf
+/Reservation/Reservation_Server/dist/
