StateLess Server Reservation

--- a/Reservation/Reservation_Server/nbproject/project.properties
+++ b/Reservation/Reservation_Server/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=reservation_server.ReservationServerApp
+main.class=server.Serveur_Reservation
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
