--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,14 @@
 /Reservation_Client/nbproject/private/
 /Reservation/reservation-Web/build/
 /Reservation/reservation-Web/dist/
+/Reservation/Application_Paiements/nbproject/private/
+/Reservation/Serveur_Card/nbproject/private/
+/Payement/Payement_Client/nbproject/private/
+/Payement/Payement_Serveur_Card/nbproject/private/
+/Payement/Payement_Serveur/nbproject/private/
+/Payement/Payement_SPAYMAP/nbproject/private/
+/Payement/Payement_CCAPP/nbproject/private/
+/Payement/Payement_SPAYMAP/build/
+/Payement/Payement_Serveur_Card/build/
+/Payement/Payement_Serveur/build/
+/Payement/Payement_Client/build/
