--- a/Reservation/Reservation_Client/nbproject/private/private.properties
+++ b/Reservation/Reservation_Client/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 project.DataBaseAccess=C:\\Users\\Arkios\\Desktop\\Inpres-EnjoyYourHolidays\\DataBaseAccess
-user.properties.file=C:\\Users\\Arkios\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Arkios\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
